# play-rinja

./: .gitmodules  Cargo.toml  README.md  Trunk.toml  build.rs  deny.toml  hack-font.css  index.html  script.mjs  style.scss
.github/workflows/: deploy.yml  rust.yml
src/: app.rs  editor.rs  main.rs
