[package]
name = "play-rinja"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/Kijewski/play-rinja"
license = "MIT OR Apache-2.0"

[dependencies]
rinja_derive_standalone = { version = "*", path = "rinja/rinja_derive_standalone", features = ["serde_json", "urlencode"] }

console_error_panic_hook = "0.1.7"
once_cell = "1.20.2"
prettyplease = "0.2.25"
proc-macro2 = { version = "1.0.89", default-features = false }
syn = { version = "2.0.87", default-features = false, features = ["full", "parsing", "printing"] }
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "regex-fancy"] }
syntect-assets = { version = "0.23.6", default-features = false, features = ["regex-fancy"] }
wasm-bindgen = "0.2.95"
yew = { version = "0.21.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.72"
features = [
    "DomTokenList",
    "HtmlDialogElement",
    "HtmlPreElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Performance",
    "Storage",
]

[lints.clippy]
type_complexity = "allow"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
